--- a/css.css
+++ b/css.css
@@ -98,7 +98,7 @@ a:hover {
 
 }
 body {
-	background-image: url(http://i0.wp.com/www.templateof.com/postpic/2014/09/cool-backgrounds-red-black-and-white_213807.jpg);
+	background-color: 	#F5DEB3
 	background-repeat: no-repeat;	
 }
 .left h3{
